--- a/style/online.scss
+++ b/style/online.scss
@@ -641,10 +641,16 @@ body {
   margin: 0 auto;
   padding-left: 10px;
   .rooms_days {
+    width: 1200px;
     padding: 100px 0 20px 0;
+    margin: 0 auto;
     display: flex;
     justify-content: space-evenly;
     position: relative;
+    @include rwd(1200){
+      width: auto;
+      margin: inherit;
+    }
     .form-group {
       display: flex;
       select {
@@ -689,11 +695,15 @@ body {
     }
   }
   .Next {
-    width: auto;
+    width: 1200px;
     padding-bottom: 100px;
-    margin-right: 20px;
+    margin: 0 auto ;
     display: flex;
     justify-content: end;
+    @include rwd(1200){
+      width: auto;
+      margin:0 20px 0 0;
+    }
     p {
       padding: 10px 40px;
       background-color: #97999b;
