--- a/style/offer.scss
+++ b/style/offer.scss
@@ -533,7 +533,7 @@ body {
     font-weight: bolder;
   }
   p {
-    padding: 10px 0 10px 10px;
+    padding: 10px 0 30px 10px;
   }
 }
 
@@ -706,9 +706,9 @@ body {
     }
   }
   .Next {
-    width: auto;
+    width: 1200px;
     padding-bottom: 100px;
-    margin-right: 20px;
+    margin: 0 auto;
     display: flex;
     justify-content: end;
     p {
@@ -716,6 +716,10 @@ body {
       background-color: #97999b;
       font-size: 14px;
       color: #fff;
+    }
+    @include rwd(1200){
+      width: auto;
+      margin:0 20px 0 0;
     }
   }
 }
