--- a/style/rooms_item.scss
+++ b/style/rooms_item.scss
@@ -491,6 +491,31 @@ body {
         font-size: 17px;
       }
     }
+    .sell_collect {
+      .sell_item {
+        width: 100%;
+        margin: 50px 0 20px 10px;
+        padding-left: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-left: 8px solid #97999b;
+        h2 {
+          font-weight: bolder;
+        }
+        p {
+          width: 120px;
+          height: 36px;
+          padding: 10px 30px;
+          background-color: #97999b;
+          color: #fff;
+          white-space: nowrap;
+        }
+      }
+      .sell_day{
+        padding-left: 30px;
+      }
+    }
     .collect_introduction {
       width: 95%;
       margin: 50px 0 0 10px;
