--- a/layout/header.html
+++ b/layout/header.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <div class="header on">
         <div class="hd_img">
             <a href="/"> <img src="../../img/logo.png" alt="" /></a>
