--- a/style/stay.scss
+++ b/style/stay.scss
@@ -151,7 +151,7 @@
         .slick-slide {
           padding-top: 10px;
           .clous_carousel_m_img {
-            margin-right: 5px;
+            margin-left: 5px;
             img {
               width: 100%;
               height: 137px;
@@ -163,13 +163,6 @@
           &.slick-current {
             .clous_carousel_m_img {
               margin-left: 0;
-            }
-          }
-        }
-        .slick-active {
-          &:last-child {
-            .clous_carousel_m_img {
-              margin: 0;
             }
           }
         }
