--- a/style/online.scss
+++ b/style/online.scss
@@ -692,6 +692,9 @@ body {
             select {
                 height: 19px;
             }
+            form{
+                display: flex;
+            }
         }
     }
     .Next {
